Fix ordered list alignment

--- a/template/style.css
+++ b/template/style.css
@@ -14,12 +14,6 @@ a:hover {
     text-decoration: underline;
 }
 
-ol {
-    padding: 0;
-    margin: 0;
-    list-style-type: decimal;
-}
-
 pre {
     background-color: #f8f8f8;
     border: 1px solid #ccc;
@@ -56,7 +50,6 @@ blockquote {
 }
 
 /* Table of Contents */
-
 .toc {
     position: fixed;
     top: 0;
@@ -75,6 +68,7 @@ blockquote {
 
 .toc ol {
     margin: 0 0 20px 20px;
+    padding: 0;
     color: #aaa;
 }
 .toc ol li {
